<resources>
    <string name="app_name">TheRestaurantTable</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">The Restaurant Table</string>
    <string name="title_activity_maps">Map</string>
    <string name="zip_hint">Please enter a zipcode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">Map</string>
    <string name="reserve">Reserve</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="image_for_app">Image for app</string>
    <string name="_0">0</string>
    <string name="time">10:00am</string>
    <string name="reservation_for">Reservation For</string>
    <string name="Date">Date</string>
    <string name="People_Label">People</string>
    <string name="Time_Label">Time</string>
    <string name="TimeReservation">Time</string>
    <string name="time_entry">10:00</string>
    <string name="browse_restaurants">Browse Restaurants</string>
    <string name="bookingHist">Booking History</string>
    <string name="resProfile">Profile</string>
    <string name="people">People</string>
    <string name="textview">TextView</string>
</resources>
