<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnBrowse"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/people_2591838_1280"
            android:text="@string/browse_restaurants"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBookingHist"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnBrowse"
            android:layout_marginTop="13dp"
            android:background="@drawable/people_2591838_1280"
            android:text="@string/bookingHist"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnBookingHist"
            android:layout_marginTop="16dp"
            android:background="@drawable/people_2591838_1280"
            android:text="@string/resProfile"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>