<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRestaurantReserve"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:background="@android:color/holo_purple"
            android:text="@string/reserve"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblDate"
            android:ems="10"
            android:inputType="date"
            android:singleLine="false"
            android:text="12/09/2017" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText"
            android:layout_marginTop="33dp"
            android:text="@string/people"
            android:textColor="@color/cardview_dark_background" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="500dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/people_2591838_1280"
            android:contentDescription="background_image"
            app:srcCompat="@drawable/people_2591838_1280" />

        <TextView
            android:id="@+id/lblReservationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="RESERVATION FOR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblRestaurantName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnRestaurantReserve"
            android:layout_below="@+id/lblReservationTitle"
            android:layout_marginTop="22dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numofPeople"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="number"
            android:text="# of People" />

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="19dp"
            android:text="Date"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtDate"
            android:layout_marginTop="15dp"
            android:text="@string/Time_Label"
            android:textColor="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblTime"
            android:ems="10"
            android:inputType="time"
            android:text="10:00" />

    </RelativeLayout>


</android.support.v7.widget.CardView>